fixed right gap on pages

--- a/src/index.css
+++ b/src/index.css
@@ -9,19 +9,18 @@ Cream: #F3F0EB
 
 */
 
+* {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  background-color: #F3F0EB;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    min-height: 90vh;
     width: 100%;
-    width: 100vw;
-    background-color: #F3F0EB;
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-    height: 100%;
-    position: relative;
 }
 
 h2, h3, p, span, input, a {
