--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,3 @@
-.pageContent {
-    width: 100%;
-    min-height: 100vh;
-    margin-bottom: 100px;
-    color: #1F1B17;
-}
-
 .firstSection {
   width: 100%;
   height: 97vh;
